# -dbus_perm_manager

./: .gitignore  CMakeLists.txt  README.md  add_dbus_services.sh  install_reqs.sh  kill_all.sh  permissions.db  run_all.sh  task.md
dbus_perm/: CMakeLists.txt  README.md  com.system.permissions.conf  com.system.permissions.service  com.system.permissions.service.old  dbus_perm.cpp  dockerfile
dbus_perm/inc/: dbus_perm.h  permissions_manager.h  sql.h  utils.h
dbus_perm/src/: dbus_perm.cpp  permissions_manager.cpp  sql.cpp  utils.cpp
dbus_time/: CMakeLists.txt  README.md  com.system.time.conf  com.system.time.service  com.system.time.service.old
dbus_time/inc/: dbus_time.h  system_time.h
dbus_time/src/: dbus_time.cpp  system_time.cpp
main_app/: CMakeLists.txt
main_app/inc/: main_app.h
main_app/src/: main_app.cpp
utils/: CMakeLists.txt
utils/inc/: utils.h
utils/src/: utils.cpp
